--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </h3>
         </div>
+        <div class="on"></div>
     </section>
     <!-- Aromatizantes -->
     <section class="aromatizantes">
         <div class="aroma-info">
             <div class="aroma-img" style="background-image: url('assets/img/es-backs/vanilla-back.jpg');"></div>
             <div class="aroma-data pd-lr">
-                <div class="item-img"></div>
+                <!-- <div class="item-img"></div> -->
                 <div class="item-data">
                     <div class="img">
                         <img src="assets/img/aromatizantes/1.png">
@@ -37,10 +38,6 @@
         <div class="selector">
             <div class="in pd-lr">
 
-                <!-- <div class="arrow">
-                    <img src="assets/img/poly-to-left.png">
-                </div> -->
-
                 <div class="item">
                     <img src="assets/img/aromatizantes/2.png">
                     <h6>Brisa Marina</h6>
@@ -54,26 +51,29 @@
                     <h6>Algodón</h6>
                 </div>
                 <div class="item">
-                    <img src="assets/img/aromatizantes/4.png">
-                    <h6>Algodón</h6>
+                    <img src="assets/img/aromatizantes/5.png">
+                    <h6>Bambú</h6>
                 </div>
                 <div class="item">
-                    <img src="assets/img/aromatizantes/4.png">
-                    <h6>Algodón</h6>
+                    <img src="assets/img/aromatizantes/6.png">
+                    <h6>Lavanda</h6>
                 </div>
                 <div class="item">
-                    <img src="assets/img/aromatizantes/4.png">
-                    <h6>Algodón</h6>
+                    <img src="assets/img/aromatizantes/7.png">
+                    <h6>Floral</h6>
                 </div>
                 <div class="item">
-                    <img src="assets/img/aromatizantes/4.png">
-                    <h6>Algodón</h6>
+                    <img src="assets/img/aromatizantes/8.png">
+                    <h6>Bebé</h6>
                 </div>
-                
-                <!-- <div class="arrow">
-                    <img src="assets/img/poly-to-right.png">
-                </div> -->
-                <div class="fixed-element"></div>
+                <div class="item">
+                    <img src="assets/img/aromatizantes/9.png">
+                    <h6>Vainilla</h6>
+                </div>
+                <div class="item">
+                    <img src="assets/img/aromatizantes/8.png">
+                    <h6>Anti Tabaco</h6>
+                </div>
                 
             </div>
         </div>
@@ -82,33 +82,55 @@
     <div class="columns">
         <!-- Automatico -->
         <section class="column automatico">
-            <div class="header">
-                <img src="" alt="">
+            <div class="header" style="background-image: url('assets/img/es-backs/home-2.jpg');">
+                <img src="assets/img/automaticos/1.png" alt="">
             </div>
-            <div class="body pd-lr">
+            <div class="body">
                 <div class="selector">
-                    <div class="item">
-                        <img src="" alt="">
+                    <div class="in">
+                        <div class="item">
+                            <img src="assets/img/automaticos/lavanda.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/manzana-y-canela.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/bebe.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/brisa-marina.png">
+                        </div>
                     </div>
                 </div>
-                <div class="data">
+                <div class="data pd-lr">
                     <h4>Este es un mensaje que tiene que ver con el producto.</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor placerat purus quis semper. Aliquam sed dapibus mi. Praesent nulla sem, fermentum vel nisl a.</p>
                 </div>
             </div>
         </section>
-        <!-- Automatico -->
+        <!-- Eléctricos -->
         <section class="column electricos">
-            <div class="header">
-                <img src="" alt="">
+            <div class="header" style="background-image: url('assets/img/es-backs/home-1.jpg');">
+                <img src="assets/img/electricos/1.png">
             </div>
-            <div class="body pd-lr">
+            <div class="body">
                 <div class="selector">
-                    <div class="item">
-                        <img src="" alt="">
+                    <div class="in">
+                        <div class="item">
+                            <img src="assets/img/automaticos/lavanda.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/manzana-y-canela.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/bebe.png">
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/automaticos/brisa-marina.png">
+                        </div>
                     </div>
                 </div>
-                <div class="data">
+                <div class="data pd-lr">
                     <h4>Este es un mensaje que tiene que ver con el producto.</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor placerat purus quis semper. Aliquam sed dapibus mi. Praesent nulla sem, fermentum vel nisl a.</p>
                 </div>
@@ -117,9 +139,9 @@
     </div>
     <!-- Desinfectantes -->
     <section class="desinfectantes">
-        <div class="img"></div>
+        <div class="img" style="background-image: url('assets/img/es-backs/bath-back.jpg');"></div>
         <div class="data pd-lr">
-            <img src="" alt="">
+            <img src="assets/img/desinfectantes/1.png">
             <h1>Pronto llega la nueva linea de desinfectantes.</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor placerat purus quis semper. Aliquam sed dapibus mi. Praesent nulla sem, fermentum vel nisl a.</p>
         </div>
@@ -128,11 +150,11 @@
     <div class="columns">
         <!-- Automatico -->
         <section class="column lustramuebles">
-            <div class="header">
-                <img src="" alt="">
+            <div class="header" style="background-image: url('assets/img/es-backs/fur-polish-back.jpg');">
+                <img src="assets/img/lustramuebles/1.png">
             </div>
-            <div class="body pd-lr">
-                <div class="data">
+            <div class="body">
+                <div class="data pd-lr">
                     <h4>Este es un mensaje que tiene que ver con el producto.</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor placerat purus quis semper. Aliquam sed dapibus mi. Praesent nulla sem, fermentum vel nisl a.</p>
                 </div>
@@ -140,11 +162,11 @@
         </section>
         <!-- Automatico -->
         <section class="column renovador">
-            <div class="header">
-                <img src="" alt="">
+            <div class="header" style="background-image: url('assets/img/es-backs/car-back.jpg');">
+                <img src="assets/img/renovadores/1.png">
             </div>
-            <div class="body pd-lr">
-                <div class="data">
+            <div class="body">
+                <div class="data pd-lr">
                     <h4>Este es un mensaje que tiene que ver con el producto.</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor placerat purus quis semper. Aliquam sed dapibus mi. Praesent nulla sem, fermentum vel nisl a.</p>
                 </div>
@@ -153,8 +175,8 @@
     </div>
     <!-- Lideres -->
     <section class="lideres">
-        <div class="header">
-            <img src="" alt="">
+        <div class="header" style="background-image: url('assets/img/world-back.jpg');">
+            <img src="assets/img/all-products.png">
         </div>
         <div class="body pd-lr">
             <h1>Productos líderes en Latino América ahora llegan a Chile</h1>
@@ -183,5 +205,8 @@
     <footer class="pd-lr">
         <p>© Todo Brillo 2019.</p>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
