--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
         </div>
     </section>
-    <footer class="pd-lr">
+    <footer class="">
         <p>© Todo Brillo 2019.</p>
     </footer>
 
