--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="on"></div>
     </section>
     <!-- Aromatizantes -->
-    <section class="aromatizantes">
+    <section class="aromatizantes" id="aromatizantes-section">
         <div class="aroma-info">
             <div class="aroma-img"></div>
             <div class="aroma-data pd-lr">
@@ -119,27 +119,28 @@
         <!-- Automatico -->
         <section class="column automatico">
             <div class="header" style="background-image: url('assets/img/es-backs/home-2.jpg');">
-                <img src="assets/img/automaticos/1.png" alt="">
+                <!-- <img src="assets/img/automaticos/1.png" alt=""> -->
+                <div class="img"></div>
                 <div class="badges"></div>
             </div>
             <div class="body">
                 <div class="selector">
                     <div class="in">
-                        <div class="item">
+                        <div class="item a-1">
                             <img src="assets/img/automaticos/lavanda.png">
-                            <div class="name a-1"><p>Lavanda</p></div>
+                            <div class="name"><p>Lavanda</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item a-2">
                             <img src="assets/img/automaticos/manzana-y-canela.png">
-                            <div class="name a-2"><p>Manzana y Canela</p></div>
+                            <div class="name"><p>Manzana y Canela</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item a-3">
                             <img src="assets/img/automaticos/bebe.png">
-                            <div class="name a-3"><p>Bebé</p></div>
+                            <div class="name"><p>Bebé</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item a-4">
                             <img src="assets/img/automaticos/brisa-marina.png">
-                            <div class="name a-4"><p>Brisa Marina</p></div>
+                            <div class="name"><p>Brisa Marina</p></div>
                         </div>
                     </div>
                 </div>
@@ -152,27 +153,28 @@
         <!-- Eléctricos -->
         <section class="column electricos">
             <div class="header" style="background-image: url('assets/img/es-backs/home-1.jpg');">
-                <img src="assets/img/electricos/1.png">
+                <!-- <img src="assets/img/electricos/1.png"> -->
+                <div class="img"></div>
                 <div class="badges"></div>
             </div>
             <div class="body">
                 <div class="selector">
                     <div class="in">
-                        <div class="item">
+                        <div class="item e-1">
                             <img src="assets/img/automaticos/lavanda.png">
-                            <div class="name e-1"><p>Lavanda</p></div>
+                            <div class="name"><p>Lavanda</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item e-2">
                             <img src="assets/img/automaticos/manzana-y-canela.png">
-                            <div class="name e-2"><p>Manzana y Canela</p></div>
+                            <div class="name"><p>Manzana y Canela</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item e-3">
                             <img src="assets/img/automaticos/bebe.png">
-                            <div class="name e-3"><p>Bebé</p></div>
+                            <div class="name"><p>Bebé</p></div>
                         </div>
-                        <div class="item">
+                        <div class="item e-4">
                             <img src="assets/img/automaticos/brisa-marina.png">
-                            <div class="name e-4"><p>Brisa Marina</p></div>
+                            <div class="name"><p>Brisa Marina</p></div>
                         </div>
                     </div>
                 </div>
