--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
+    <meta property="og:title" content="Todo Brillo"/>
+    <!-- <meta property="og:image" content=""/> -->
 </head>
 <body>
     <!-- Hero -->
